ocmp themes, fix in jekyll plugin wrapping all tables with table wrapper

--- a/src/sass/components/_collapsibles.scss
+++ b/src/sass/components/_collapsibles.scss
@@ -22,6 +22,7 @@
 				&-title {
 					max-width: 57%;
 					display: flex;
+					font-weight: bold;
 				}
 			}
 			&-body {
