--- a/src/sass/components/_variables.scss
+++ b/src/sass/components/_variables.scss
@@ -15,37 +15,37 @@ $medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width 
 
 $required-consent-bg-color: rgba(0,0,0,0.7);
 
-$bar-bg-color: #2a2e35;
-$bar-text-color: #bdbdbd;
-$bar-shadow-color: rgba(0, 0, 0, 0.37);
-$bar-title-color: #00897b;
+$bar-bg-color: $theme-bar-bg-color;
+$bar-text-color: $theme-bar-text-color;
+$bar-shadow-color: $theme-bar-shadow-color;
+$bar-title-color: $theme-bar-title-color;
 
-$button-bg-color: #26a69a;
-$button-text-color: #ffffff;
-$buton-bg-color-hover: #2bbbad;
+$button-bg-color: $theme-button-bg-color;
+$button-text-color: $theme-button-text-color;
+$buton-bg-color-hover: $theme-buton-bg-color-hover;
 
-$button-flat-bg-color: #26a69a;
-$button-flat-text-color: #ffffff;
-$buton-flat-bg-color-hover: #2bbbad;
+$button-flat-bg-color: $theme-button-flat-bg-color;
+$button-flat-text-color: $theme-button-flat-text-color;
+$buton-flat-bg-color-hover: $theme-buton-flat-bg-color-hover;
 
-$modal-bg-color: #2a2e35;
-$modal-text-color: #bdbdbd;
-$modal-title-color: #00897b;
-$modal-footer-bg-color: darken($modal-bg-color, 5%);
-$modal-footer-border-color: #bdbdbd;
+$modal-bg-color: $theme-modal-bg-color;
+$modal-text-color: $theme-modal-text-color;
+$modal-title-color: $theme-modal-title-color;
+$modal-footer-bg-color: $theme-modal-footer-bg-color;
+$modal-footer-border-color: $theme-modal-footer-border-color;
 
-$collapsible-header-bg-color: lighten(#2a2e35, 5%);
-$collapsible-header-text-color: #bdbdbd;
-$collapsible-border-color: darken(#bdbdbd, 15%);
-$collapsible-shadow-color: darken(#bdbdbd69, 15%);
+$collapsible-header-bg-color: $theme-collapsible-header-bg-color;
+$collapsible-header-text-color: $theme-collapsible-header-text-color;
+$collapsible-border-color: $theme-collapsible-border-color;
+$collapsible-shadow-color: $theme-collapsible-shadow-color;
 
-$switch-text-color: #9e9e9e;
-$switch-bg-color: rgba(0,0,0,.38);
-$switch-off-color: #f1f1f1;
-$switch-on-color: #26a69a;
+$switch-text-color: $theme-switch-text-color;
+$switch-bg-color: $theme-switch-bg-color;
+$switch-off-color: $theme-switch-off-color;
+$switch-on-color: $theme-switch-on-color;
 
-$table-border-color: darken(#bdbdbd, 35%) !default;
+$table-border-color: $theme-table-border-color;
 
-$floating-btn-bg-color: #26a69a;
-$floating-btn-bg-color-hover: lighten(#26a69a, 5%);
-$floating-btn-color: #ffffff;
+$floating-btn-bg-color: $theme-floating-btn-bg-color;
+$floating-btn-bg-color-hover: $theme-floating-btn-bg-color-hover;
+$floating-btn-color: $theme-floating-btn-color;
